# Nexus-Speedometer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
scripts/: generate_version.ps1  generate_version.sh
src/: embedded_dll_loader.cpp  embedded_dll_loader.h  entry.cpp  resources.rc  resources.rc.in  settings.cpp  settings.h  shared.cpp  shared.h  speedreader.h  speedreader_loader.cpp  speedreader_loader.h
